--- a/MySlamApplication/src/main/resources/templates/index.html
+++ b/MySlamApplication/src/main/resources/templates/index.html
@@ -28,8 +28,8 @@
                     <li class="active nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="slam">¿Cómo crear un Slam?</a></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">¿Quiénes somos?</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tiposDePreguntas.html">Tipos de Preguntas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Ingresar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="preguntas">Tipos de Preguntas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login">Ingresar</a></li>
                     <li class="nav-item nav-item-cta last"><a style="background: #3b5998; border: none;" class="btn btn-cta btn-cta-secondary" href="login">¡Registrate solo con facebook!</a></li>
                 </ul><!--//nav-->
             </div><!--//navabr-collapse-->
@@ -51,16 +51,8 @@
     <div class="container text-center">
         <h2 class="title">¡Crea tu propio Slam y pide a tus amigos un recuerdo!</h2>
         <p class="intro" >¡Responde todo tipo de preguntas! <br />
-            <form action="/connect/facebook" method="POST">
-                        <input type="hidden" name="scope" value="user_posts" />
-                        <div class="formInfo">
-                <p>You aren't connected to Facebook yet. Click the button to connect this application with your Facebook account.</p>
-            </div>
-            <p><button type="submit">Connect to Facebook</button></p>
-            </form>
-
             ¡Diversión y curiosidad sin limites!</p>
-        <p><a class="btn btn-cta btn-cta-primary" href="signup.html">¡Ingresar!</a></p>
+        <p><a class="btn btn-cta btn-cta-primary" href="login">¡Ingresar!</a></p>
         <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
     </div><!--//container-->
 </section><!--//promo-->
