--- a/MySlamApplication/src/main/resources/templates/login.html
+++ b/MySlamApplication/src/main/resources/templates/login.html
@@ -23,51 +23,35 @@
 
 <body class="login-page access-page has-full-screen-bg">
     <div class="upper-wrapper">
-        <!-- ******HEADER****** -->
-        <header class="header">  
-            <div class="container">       
-                <h1 class="logo">
-                    <a href="index.html"><span class="logo-icon"></span><span class="text">Velocity</span></a>
-                </h1><!--//logo-->
-                                     
-            </div><!--//container-->
-        </header><!--//header-->
-        
+
         <!-- ******Login Section****** --> 
         <section class="login-section access-section section">
             <div class="container">
                 <div class="row">
                     <div class="form-box ml-lg-auto mr-lg-auto col-12 col-lg-10">     
                         <div class="form-box-inner">
-                            <h2 class="title text-center">Log in to Velocity</h2>                 
+                            <h2 class="title text-center">¡Diversión sin límites!</h2>
                             <div class="row">
                                 <div class="form-container col-12 col-lg-5">
-                                    <form class="login-form">              
+                                    <form class="login-form">
                                         <div class="form-group email">
-                                            <label class="sr-only" for="login-email">Email or username</label>
-                                            <input id="login-email" type="email" class="form-control login-email" placeholder="Email or username"/>
+                                            <label class="sr-only" for="login-email">Usuario</label>
+                                            <input id="login-email" type="email" class="form-control login-email" placeholder="Usuario"/>
                                         </div><!--//form-group-->
                                         <div class="form-group password">
-                                            <label class="sr-only" for="login-password">Password</label>
-                                            <input id="login-password" type="password" class="form-control login-password" placeholder="Password"/>
-                                            <p class="forgot-password"><a href="reset-password.html">Forgot password?</a></p>
+                                            <label class="sr-only" for="login-password">Contraseña</label>
+                                            <input id="login-password" type="password" class="form-control login-password" placeholder="Contraseña"/>
+                                            <p class="forgot-password"><a href="reset-password.html">Olvidé mi contraseña</a></p>
                                         </div><!--//form-group-->
-                                        <button type="submit" class="btn btn-block btn-cta-primary">Log in</button>
-                                        <div class="checkbox remember">
-                                            <label>
-                                                <input type="checkbox"/> Remember me
-                                            </label>
-                                        </div><!--//checkbox-->
-                                         <p class="lead">Don't have a Velocity account yet? <br /><a class="signup-link" href="signup.html">Create your account now</a></p>  
+                                        <button type="submit" class="btn btn-block btn-cta-primary">¡Ingresar!</button>
+                                         <p class="lead">¿Deseas crear tu cuenta? <br /><a class="signup-link" href="signup.html">Crea tu cuenta ahora</a></p>
                                     </form>
                                 </div><!--//form-container-->
-                                <div class="social-btns ml-lg-auto mr-lg-auto col-12 col-lg-5">  
-                                    <div class="divider"><span>Or</span></div>                      
+                                <div class="social-btns ml-lg-auto mr-lg-auto col-12 col-lg-5">
+                                    <div class="divider"><span>Or</span></div>
                                     <ul class="list-unstyled social-login">
                                         <li><button class="twitter-btn btn" type="button"><i class="fa fa-twitter"></i>Log in with Twitter</button></li>
-                                        <li><button class="facebook-btn btn" type="button"><i class="fa fa-facebook"></i><a href="connect/facebook">Log in with Facebook</a></button></li>
-                                        <li><button class="github-btn btn" type="button"><i class="fa fa-github-alt"></i>Log in with Github</button></li>
-                                        <li><button class="google-btn btn" type="button"><i class="fa fa-google-plus"></i>Log in with Google</button></li>
+                                        <li><button class="facebook-btn btn" type="submit"><i class="fa fa-facebook"></i><a href="connect/facebook">Log in with Facebook</a></button></li>
                                     </ul>
                                 </div><!--//social-btns-->
                             </div><!--//row-->
